force-app/main/default/objects/Visit_Confirmation__c/Visit_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Visit Confirmation</label>
    <nameField>
        <displayFormat>VID-{0000}</displayFormat>
        <label>Visit Confirmation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Confirmations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>