force-app/main/default/objects/Visit_Confirmation__c/fields/Confirmation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_Time__c</fullName>
    <label>Confirmation Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>