force-app/main/default/objects/Visit_Confirmation__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <formula>IF(Days_Till_Visit__c &gt; 10, &quot;GREEN&quot;, IF(Days_Till_Visit__c &gt; 5, &quot;YELLOW&quot;, &quot;RED&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmation Status</label>
    <type>Text</type>
</CustomField>