force-app/main/default/objects/Visit_Confirmation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Confirmations</relationshipLabel>
    <relationshipName>Visit_Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>