force-app/main/default/objects/Visit_Confirmation__c/fields/Days_Till_Visit__c.field-meta.xml
<CustomField>
    <fullName>Days_Till_Visit__c</fullName>
    <formula>DATEVALUE(Event_Start_DateTime__c) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Till Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>