force-app/main/default/objects/Visit_Confirmation__c/fields/Demo_Reset_Week_Offset__c.field-meta.xml
<CustomField>
    <fullName>Demo_Reset_Week_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sets the relative week that this visit confirmation is reset too when a demo reset is done. 0 = Current Week, -1 last week, 1 next week, etc...</description>
    <label>Demo_Reset_Week_Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>