force-app/main/default/objects/Visit_Confirmation__c/fields/Event_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_DateTime__c</fullName>
    <label>Event Start DateTime</label>
    <type>DateTime</type>
</CustomField>