force-app/main/default/objects/Visit_Confirmation__c/fields/Event_Subject__c.field-meta.xml
<CustomField>
    <fullName>Event_Subject__c</fullName>
    <label>Event Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>