force-app/main/default/objects/Visit_Confirmation__c/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <formula>HYPERLINK(
				IF(TEXT(Event_Type__c) = &quot;Event&quot;,
							LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;lightning/r/Event/&apos; + Event_Id__c + &apos;/view&apos;, 
						 LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;lightning/r/ServiceAppointment/&apos; + Event_Id__c + &apos;/view&apos;
						),  Event_Subject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>