force-app/main/default/objects/Visit_Confirmation__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Visit Confirmations</relationshipLabel>
    <relationshipName>Visit_Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>