force-app/main/default/objects/Visit_Confirmation__c/fields/Facility_Photo__c.field-meta.xml
<CustomField>
    <fullName>Facility_Photo__c</fullName>
    <formula>IF(ISBLANK(Facility__r.Photo_URL__c), &quot;&quot;, IMAGE(Facility__r.Photo_URL__c,  Facility__r.Facility_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Photo</label>
    <type>Text</type>
</CustomField>