force-app/main/default/objects/Visit_Confirmation__c/fields/Government_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Government_POC_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Government POC Email</label>
    <type>Text</type>
</CustomField>