force-app/main/default/objects/Visit_Confirmation__c/fields/Government_POC_Name__c.field-meta.xml
<CustomField>
    <fullName>Government_POC_Name__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Government POC Name</label>
    <type>Text</type>
</CustomField>