force-app/main/default/objects/Visit_Confirmation__c/fields/Government_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Government_POC_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Government POC Phone</label>
    <type>Text</type>
</CustomField>