force-app/main/default/objects/Visit_Confirmation__c/fields/Owner_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact_Id__c</fullName>
    <formula>Owner:User.Contact_Record__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Contact Id</label>
    <type>Text</type>
</CustomField>