force-app/main/default/objects/Visit_Confirmation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Visit Confirmations</relationshipLabel>
    <relationshipName>Visit_Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>