force-app/main/default/objects/Visit_Confirmation__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IMAGE( 
CASE( Confirmation_Status__c,
&quot;GREEN&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;YELLOW&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;RED&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>