force-app/main/default/objects/Visit_Confirmation__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>$Setup.PBU_Community_URLs__c.Constituent_Self_Service__c  + &apos;/s/visit-confirmation/&apos; + Id + &apos;/&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>