force-app/main/default/objects/Visit_Confirmation__c/fields/Visit_Information_Summary__c.field-meta.xml
<CustomField>
    <fullName>Visit_Information_Summary__c</fullName>
    <label>Visit Information Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>