force-app/main/default/objects/Visit_Confirmation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Start_DateTime__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Contact__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Facility__c</columns>
    <columns>Confirmed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>