force-app/main/default/objects/Visit_Confirmation__c/listViews/My_Open_Visit_Confirmations.listView-meta.xml
<ListView>
    <fullName>My_Open_Visit_Confirmations</fullName>
    <columns>NAME</columns>
    <columns>Event_URL__c</columns>
    <columns>Event_Start_DateTime__c</columns>
    <columns>Contact__c</columns>
    <columns>Facility__c</columns>
    <columns>Status_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Confirmed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Visit Confirmation Requests</label>
</ListView>